# cpp-ecs

./: CMakeLists.txt  LICENSE
.github/workflows/: asan.yml  coverage.yml  unit_tests.yml  usan.yml  valgrind.yml
include/: CMakeLists.txt  _internal.hpp  entity.hpp  indexed_zipper.hpp  indexed_zipper_iterator.hpp  is_sparse_array.hpp  registry.hpp  sparse_array.hpp  zipper.hpp  zipper_iterator.hpp
include/exceptions/: component_already_registered_exception.hpp  component_not_registered_exception.hpp
src/: CMakeLists.txt  entity.cpp  registry.cpp
src/exceptions/: component_already_registered_exception.cpp  component_not_registered_exception.cpp
tests/: CMakeLists.txt  TestComponentAlreadyRegisteredException.cpp  TestComponentNotRegisteredException.cpp  TestIndexedZipper.cpp  TestRegistryComponents.cpp  TestRegistryEntities.cpp  TestRegistrySystems.cpp  TestSparseArray.cpp  TestZipper.cpp
